@@ -602,11 +602,6 @@ void CChildFrame::SetLastCompareResult(int nResult)
 	theApp.SetLastCompareResult(nResult);
 }
 
-void CChildFrame::UpdateSplitter()
-{
-   m_wndSplitter.RecalcLayout();
-}
-
 void CChildFrame::OnTimer(UINT_PTR nIDEvent) 
 {
 	if (IsWindowVisible())
