@@ -8,6 +8,7 @@ WinMerge 2.7.5.3
   Change Up/Down button names in folder compare columns dialog(#1800064)
   BugFix: Fix MakeResDll crash (#1795421)
   BugFix: Full screen mode didn't work with multiple monitors (#1788168)
+  Bugfix: Revert multiple monitor patches (#1788168)
   BugFix: PgUp key didn't do anything in beginning of the file (#1795680)
   BugFix: The option 'Automatically scroll to first difference' didn't work
     properly when word-wrap mode was on (#1795814)
